Always use ptr_mode on address.

2011-02-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/47926
	* config/i386/i386.c (ix86_trampoline_init): Always use ptr_mode
	on address.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/x32@170571 138bc75d-0d04-0410-961f-82ee72b054a4